feat: 升级2.0开发套件